--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
-            <li><a href="brokerage.html">TEAM</a></li>
+            <li><a href="team.html">TEAM</a></li>
             <li class="sub-2"><a href="development.html">PRESS</a></li>
             </ul>
 
