--- a/team.html
+++ b/team.html
@@ -40,8 +40,8 @@
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
-          <li class="nav-item-1"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2" id="active"><a href="what-we-do.html">WHAT WE DO</a>
+          <li class="nav-item-1" id="active"><a href="who-we-are.html">WHO WE ARE</a></li>
+          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
 
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
@@ -63,28 +63,7 @@
 
 
 <div class="scroll-container col-12 p-0" id="what-we-do">
-      <section class="col-12" id="container-1">
-        <span class="top"></span>
 
-
-        <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
-<source src="assets/videos/what-we-do-desktop.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-
-<video muted autoplay playsinline class="video-background d-lg-none">
-<source src="assets/videos/what-we-do-mobile.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-
-
-
-
-<h1 class="col-10 offset-1"><span class="delay-1">We</span> <span class="delay-2">are</span><br><span class="delay-3">market</span><br><span class="orange-underline delay-4">makers</span></h1>
-
-        </section>
 
 
 
@@ -93,9 +72,9 @@ Your browser does not support the video tag.
 
 
 
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">DELIVERING
+  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">YOUR
     <br>
-<span class="green-underline">LUXURY</span></h2>
+<span class="green-underline">TEAM</span></h2>
 
 <div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
 <p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
@@ -120,28 +99,6 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-</div>
-
-</section>
-
-<section class="col-12 p-0 d-none d-lg-block">
-<embed class="col-12 p-0" src="push-3.html" id="cover-1">
-</section>
-
-
-
-
-<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
-  <img src="assets/images/push-1.png" alt="#" class="col-12">
-<div class="col-10 col-md-8 offset-1 offset-md-2">
-  <h2 class="col-12">
-YOUR SPACE<br><span class="turquoise-underline">SETS THE PACE</span>
-    </h2>
-
-    <p class="col-12">
-      Happy employees are productive employees, and productive employees are good for business.  But your space sets the pace. Imagine walking a prospect through a workplace full of creativity, collaboration, and positive energy. A place where it is clear that the employees enjoy their work. These positive vibes lead to more positive feelings for the prospect, which in turn leads to more prospects becoming clients.
-
-</p>
 </div>
 
 </section>
