--- a/team.html
+++ b/team.html
@@ -110,45 +110,120 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="featured-projects">
+<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="leadership">
 
   <p class="small-headline col-6">
-  SUCCESS STORIES
+  LEADERSHIP
   </p>
 
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
-    <a href="#">
-      <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/testimonials/rice.png" alt="#">
+  <img src="assets/images/team/jim.png" alt="#" class="col-md-12">
+  <h4>JIM SCALO</h4>
+  <h5>President & CEO</h5>
+
+  <ul>
+    <li><a href="#">email address</a></li>
+    <li><a href="#">phone number</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Read More</a></li>
+  </ul>
+  <div class="background-white">
   </div>
-<h3>Toby Rice</h3>
-</a>
+  </div>
+  </div>
+
+
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+  <div class="portfolio-list col-12 float-left">
+  <img src="assets/images/team/lindsay.png" alt="#" class="col-md-12">
+  <h4>JIM SCALO</h4>
+  <h5>President & CEO</h5>
+
+  <ul>
+    <li><a href="#">email address</a></li>
+    <li><a href="#">phone number</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Read More</a></li>
+  </ul>
+  <div class="background-white">
+  </div>
+  </div>
+  </div>
+
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+  <div class="portfolio-list col-12 float-left">
+  <img src="assets/images/team/christie.png" alt="#" class="col-md-12">
+  <h4>JIM SCALO</h4>
+  <h5>President & CEO</h5>
+
+  <ul>
+    <li><a href="#">email address</a></li>
+    <li><a href="#">phone number</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Read More</a></li>
+  </ul>
+  <div class="background-white">
+  </div>
+  </div>
+  </div>
+
+
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+  <div class="portfolio-list col-12 float-left">
+  <img src="assets/images/team/steve.png" alt="#" class="col-md-12">
+  <h4>JIM SCALO</h4>
+  <h5>President & CEO</h5>
+
+  <ul>
+    <li><a href="#">email address</a></li>
+    <li><a href="#">phone number</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Read More</a></li>
+  </ul>
+  <div class="background-white">
+  </div>
+  </div>
+  </div>
+
+
+
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+  <div class="portfolio-list col-12 float-left">
+  <img src="assets/images/team/bob.png" alt="#" class="col-md-12">
+
+<h4>JIM SCALO</h4>
+<h5>President & CEO</h5>
+
+<ul>
+  <li><a href="#">email address</a></li>
+  <li><a href="#">phone number</a></li>
+  <li><a href="#">LinkedIn</a></li>
+  <li><a href="#">Read More</a></li>
+</ul>
+<div class="background-white">
+</div>
 </div>
 </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/waldron.png" alt="#">
-</div>
-<h3>John Waldron</h3>
-</a>
-</div>
-</div>
 
-<div class="container-p col-10 col-md-4 col-lg-3 col-xl-4 offset-1 offset-xl-0 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/testimonials/fleck.png" alt="#">
-</div>
-<h3>Steve Fleck</h3>
-</a>
-</div>
-</div>
+<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+  <div class="portfolio-list col-12 float-left">
+  <img src="assets/images/team/scott.png" alt="#" class="col-md-12">
+  <h4>JIM SCALO</h4>
+  <h5>President & CEO</h5>
+
+  <ul>
+    <li><a href="#">email address</a></li>
+    <li><a href="#">phone number</a></li>
+    <li><a href="#">LinkedIn</a></li>
+    <li><a href="#">Read More</a></li>
+  </ul>
+  <div class="background-white">
+  </div>
+  </div>
+  </div>
 
 
 </section>
