--- a/team.html
+++ b/team.html
@@ -119,14 +119,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/jim.png" alt="#" class="col-md-12">
+  <div class="name-container">
   <h4>JIM SCALO</h4>
   <h5>President & CEO</h5>
+</div>
 
   <ul>
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read More</a></li>
+    <li><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -137,14 +139,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/lindsay.png" alt="#" class="col-md-12">
-  <h4>JIM SCALO</h4>
-  <h5>President & CEO</h5>
+    <div class="name-container">
+  <h4>Lindsay Files</h4>
+  <h5>Chief Financial Officer</h5>
+</div>
 
   <ul>
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read More</a></li>
+    <li><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -154,14 +158,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/christie.png" alt="#" class="col-md-12">
-  <h4>JIM SCALO</h4>
-  <h5>President & CEO</h5>
+    <div class="name-container">
+  <h4>Christie Reiber</h4>
+  <h5>Chief Investment Officer</h5>
+</div>
 
   <ul>
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read More</a></li>
+    <li><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -172,14 +178,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/steve.png" alt="#" class="col-md-12">
-  <h4>JIM SCALO</h4>
+    <div class="name-container">
+  <h4>Steve Whittingham</h4>
   <h5>President & CEO</h5>
+</div>
 
   <ul>
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read More</a></li>
+    <li><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -191,15 +199,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/bob.png" alt="#" class="col-md-12">
-
-<h4>JIM SCALO</h4>
-<h5>President & CEO</h5>
+  <div class="name-container">
+<h4>Bob Fittipaldo</h4>
+<h5>Director of Facilities</h5>
+</div>
 
 <ul>
   <li><a href="#">email address</a></li>
   <li><a href="#">phone number</a></li>
   <li><a href="#">LinkedIn</a></li>
-  <li><a href="#">Read More</a></li>
+  <li><a href="#">Read Bio</a></li>
 </ul>
 <div class="background-white">
 </div>
@@ -211,14 +220,16 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/scott.png" alt="#" class="col-md-12">
-  <h4>JIM SCALO</h4>
-  <h5>President & CEO</h5>
+    <div class="name-container">
+  <h4>Scott DiGuglielmo</h4>
+  <h5>Agency Brokerage Director</h5>
+</div>
 
   <ul>
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read More</a></li>
+    <li><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
