--- a/portfolio.html
+++ b/portfolio.html
@@ -100,10 +100,8 @@
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
 
-                      <li class="margin-left"><a href="#" class="filter" data-filter=".east">EAST</a></li>
-                      <li><a href="#" class="filter" data-filter=".west">WEST</a></li>
-                        <li><a href="#" class="filter" data-filter=".south">SOUTH</a></li>
-                      <li><a href="#" class="filter" data-filter=".central">CENTRAL</a></li>
+                      <li class="margin-left"><a href="#" class="filter" data-filter=".east">URBAN</a></li>
+                      <li><a href="#" class="filter" data-filter=".west">SUBURBAN</a></li>
 
                     </ul>
 
