--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
-            <li class="sub-2"><a href="development.html">PRESS</a></li>
+            <li class="sub-2"><a href="press.html">PRESS</a></li>
             </ul>
 
           </li>
@@ -61,7 +61,7 @@
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
 <li class="sub-1"><a href="brokerage.html">TEAM</a></li>
-<li class="sub-2"><a href="development.html">PRESS</a></li>
+<li class="sub-2"><a href="press.html">PRESS</a></li>
 </ul>
 </li>
 
