--- a/team.html
+++ b/team.html
@@ -39,28 +39,53 @@
       </header>
 
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
-        <ul class="main-nav col-10 col-lg-6 col-xl-6 offset-1 offset-xl-2">
-          <li class="nav-item-1" id="active"><a href="who-we-are.html">WHO WE ARE</a></li>
-          <li class="nav-item-2"><a href="what-we-do.html">WHAT WE DO</a>
+        <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
+          <li class="nav-item-1 d-none d-xl-block" id="active"><a href="who-we-are.html">WHO WE ARE</a>
+            <ul id="subNav1">
+            <li><a href="team.html">TEAM</a></li>
+            <li class="sub-2"><a href="press.html">PRESS</a></li>
+            </ul>
+
+          </li>
+<li class="nav-item-1 d-xl-none"><a href="who-we-are.html">WHO WE ARE</a></li>
+<li class="nav-item-2 d-xl-none" id="subnav-1-open"><a onclick="subNav1()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
+
+<li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
+  <ul>
+<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
+<li class="sub-2"><a href="press.html">PRESS</a></li>
+</ul>
+</li>
+
+
+          <li class="nav-item-2 d-none d-xl-block"><a href="what-we-do.html">WHAT WE DO</a>
             <ul id="subnav">
             <li><a href="brokerage.html">BROKERAGE</a></li>
             <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
             <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
             </ul>
-          </li>
+  </li>
+<li class="nav-item-2 d-block d-xl-none"><a href="what-we-do.html">WHAT WE DO</a></li>
+          <li class="nav-item-2 d-xl-none" id="subnav-open"><a onclick="subNav()"><img src="assets/arrow-vertical.svg" alt="#"></a></li>
 
+          <li class="subnav-mobile-custom" id="subNavMobile">
+            <ul>
+          <li class="sub-1"><a href="brokerage.html">BROKERAGE</a></li>
+          <li class="sub-2"><a href="development.html">DEVELOPMENT</a></li>
+          <li class="sub-3"><a href="management.html">MANAGEMENT</a></li>
+        </ul>
+        </li>
 
           <li class="nav-item-3"><a href="portfolio.html">PORTFOLIO</a></li>
           </ul>
 
-          <ul class="secondary-nav col-10 col-lg-4 col-xl-4 offset-1 offset-lg-0">
+          <ul class="secondary-nav col-8 col-md-5 offset-md-4 col-lg-4 col-xl-4 offset-2 offset-lg-0">
             <li class="nav-item-4"><a href="#">SCHEDULE A TOUR</a></li>
             <li class="nav-item-5"><a href="#">MEMBERS</a></li>
             </ul>
 
           </nav>
-
 
 <div class="scroll-container col-12 p-0" id="what-we-do">
 
@@ -128,7 +153,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read Bio</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -148,7 +173,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read Bio</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -167,7 +192,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read Bio</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -187,7 +212,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read Bio</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
@@ -208,7 +233,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   <li><a href="#">email address</a></li>
   <li><a href="#">phone number</a></li>
   <li><a href="#">LinkedIn</a></li>
-  <li><a href="#">Read Bio</a></li>
+  <li class="bio"><a href="#">Read Bio</a></li>
 </ul>
 <div class="background-white">
 </div>
@@ -229,7 +254,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
     <li><a href="#">email address</a></li>
     <li><a href="#">phone number</a></li>
     <li><a href="#">LinkedIn</a></li>
-    <li><a href="#">Read Bio</a></li>
+    <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
   <div class="background-white">
   </div>
