--- a/press.html
+++ b/press.html
@@ -91,30 +91,6 @@
 
 
             <div class="col-12 p-0" id="portfolio">
-            <aside class="col-12 col-lg-3 float-left p-0 d-none">
-
-              <form class="col-8 offset-2 float-left">
-                <h2>PROPERTIES</h2>
-                <a href="#" id="portfolio-active">ALL</a>
-                <a href="#">CURRENT</a>
-                <h3>PORTFOLIO TYPE</h3>
-                <input type="checkbox" id="retail" class="checkbox float-left"><label for="retail">RETAIL</label>
-                <br>
-                <input type="checkbox" id="office" class="checkbox float-left"><label for="office">OFFICE</label>
-                <br>
-                <h3>LOCATION</h3>
-                <input type="checkbox" id="north" class="checkbox float-left"><label for="retail">NORTH</label>
-                <br>
-                <input type="checkbox" id="east" class="checkbox float-left"><label for="office">EAST</label>
-                <br>
-                <input type="checkbox" id="west" class="checkbox float-left"><label for="retail">WEST</label>
-                <br>
-                <input type="checkbox" id="central" class="checkbox float-left"><label for="office">CENTRAL</label>
-                <br>
-                <a href="#" class="update">UPDATE</a>
-                </form>
-
-              </aside>
 
               <div class="container-mixitup col-12 p-0">
 
@@ -124,17 +100,11 @@
                       <li><a href="#" class="filter" data-filter="all">ALL</a></li>
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
-
-                      <li class="margin-left"><a href="#" class="filter" data-filter=".east">EAST</a></li>
-                      <li><a href="#" class="filter" data-filter=".west">WEST</a></li>
-                        <li><a href="#" class="filter" data-filter=".south">SOUTH</a></li>
-                      <li><a href="#" class="filter" data-filter=".central">CENTRAL</a></li>
-
                     </ul>
 
 
 
-            <ul class="containMix portfolio-container col-12 col-lg-10 offset-lg-1 float-left">
+            <ul class="containMix portfolio-container col-12 col-lg-10 offset-lg-1 float-left" id="press">
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
@@ -142,8 +112,8 @@
                   <div class="col-12 p-0 portfolio-image-container">
               <img src="assets/images/portfolio/beacon.png" alt="#">
               </div>
-            <h3>BEACON I</h3>
-            <p>South Fayette</p>
+            <h3>Corridors of Opportunity: What's next for the Strip District?</h3>
+            <p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
             </a>
             </div>
           </li>
@@ -155,8 +125,8 @@
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/bentley.png" alt="#">
             </div>
-            <h3>THE BENTLEY</h3>
-            <p>Greentree</p>
+            <h3>Scalo's Viewpoint: The forces Covid can't stop</h3>
+            <p>Feb 3, 2021, 7:54am EST | Jim Scalo</p>
             </a>
             </div>
           </li>
@@ -167,8 +137,8 @@
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/boardwalk.png" alt="#">
             </div>
-            <h3>BOARDWALK</h3>
-            <p>North Fayette</p>
+            <h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
+            <p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
             </a>
             </div>
           </li>
@@ -182,8 +152,8 @@
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/diamond.png" alt="#">
             </div>
-            <h3>DIAMOND RIDGE</h3>
-            <p>Moon Township</p>
+            <h3>Burns Scalo doubles investment on Riviera office project and lands another life sciences firm</h3>
+            <p>Dec 29, 2020, 11:05am EST | Tim Schooley</p>
             </a>
             </div>
           </li>
@@ -194,8 +164,8 @@
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/piazza.png" alt="#">
             </div>
-            <h3>THE PIAZZA</h3>
-            <p>South Fayette</p>
+            <h3>Burns Scalo lands publicly traded biotech firm for Riviera in South Oakland</h3>
+            <p>Oct 14, 2020, 2:59pm EDT | Tim Schooley</p>
             </a>
             </div>
           </li>
