--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -92,41 +92,7 @@
 
 
 
-        <section class="col-12" id="container-2">
-        <span class="top"></span>
 
-
-
-  <h2 class="col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">YOUR
-    <br>
-<span class="green-underline">TEAM</span></h2>
-
-<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
-<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-We don’t <span class="italic">sell</span> a luxury product — we <span class="italic">deliver</span> a luxury experience. It’s not just about what’s new, but about what matters. Through the design, development, brokerage, and management of world-class workplaces, we deliver a new form luxury and a culture of inclusivity that drives today’s businesses forward.
-</p>
-
-</div>
-
-  <div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-
-  <a href="team-brokerage.html" class="col-12 link-outline-2"><p class="col-10">BROKERAGE</p>
-<img src="assets/arrow.svg" alt="brokerage.html" class="col-2">
-</a>
-
-    <a href="team-development.html" class="col-12 link-outline-2"><p class="col-10">DEVELOPMENT</p>
-<img src="assets/arrow.svg" alt="development.html" class="col-2">
-    </a>
-
-  <a href="team-management.html" class="col-12 border-bottom link-outline-2"><p class="col-10">MANAGEMENT</p>
-<img src="assets/arrow.svg" alt="management.html" class="col-2">
-    </a>
-
-
-
-</div>
-
-</section>
 
 
 
@@ -138,7 +104,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 <section class="featured-projects col-12 col-xl-10 offset-xl-1" id="leadership">
 
   <p class="small-headline col-6">
-  LEADERSHIP
+  BROKERAGE
   </p>
 
 <div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
