--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -53,7 +53,7 @@
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
-<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
+<li class="sub-1"><a href="team.html">TEAM</a></li>
 <li class="sub-2"><a href="press.html">PRESS</a></li>
 </ul>
 </li>
