--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 
 <li class="subnav-mobile-custom d-block-xl-none" id="subNavMobile1">
   <ul>
-<li class="sub-1"><a href="brokerage.html">TEAM</a></li>
+<li class="sub-1"><a href="team.html">TEAM</a></li>
 <li class="sub-2"><a href="press.html">PRESS</a></li>
 </ul>
 </li>
@@ -135,13 +135,13 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="leadership">
+<section class="featured-projects col-12 col-md-10 offset-md-1" id="leadership">
 
   <p class="small-headline col-6">
   LEADERSHIP
   </p>
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/jim.png" alt="#" class="col-md-12">
   <div class="name-container">
@@ -161,7 +161,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/lindsay.png" alt="#" class="col-md-12">
     <div class="name-container">
@@ -180,7 +180,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
   </div>
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/christie.png" alt="#" class="col-md-12">
     <div class="name-container">
@@ -200,7 +200,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/steve.png" alt="#" class="col-md-12">
     <div class="name-container">
@@ -221,7 +221,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/bob.png" alt="#" class="col-md-12">
   <div class="name-container">
@@ -242,7 +242,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
+<div class="container-p col-10 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/scott.png" alt="#" class="col-md-12">
     <div class="name-container">
