--- a/team.html
+++ b/team.html
@@ -135,15 +135,15 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<section class="featured-projects col-12 col-md-10 offset-md-1" id="leadership">
+<section class="featured-projects col-10 col-md-10 offset-1" id="leadership">
 
   <p class="small-headline col-6">
   LEADERSHIP
   </p>
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/jim.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/jim.png" alt="#" class="col-12">
   <div class="name-container">
   <h4>JIM SCALO</h4>
   <h5>President & CEO</h5>
@@ -161,9 +161,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/lindsay.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/lindsay.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Lindsay Files</h4>
   <h5>Chief Financial Officer</h5>
@@ -180,9 +180,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
   </div>
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/christie.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/christie.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Christie Reiber</h4>
   <h5>Chief Investment Officer</h5>
@@ -200,9 +200,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/steve.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/steve.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Steve Whittingham</h4>
   <h5>President & CEO</h5>
@@ -221,9 +221,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/bob.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/bob.png" alt="#" class="col-12">
   <div class="name-container">
 <h4>Bob Fittipaldo</h4>
 <h5>Director of Facilities</h5>
@@ -242,9 +242,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-10 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-lg-2 float-left">
   <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/scott.png" alt="#" class="col-md-12">
+  <img src="assets/images/team/scott.png" alt="#" class="col-12">
     <div class="name-container">
   <h4>Scott DiGuglielmo</h4>
   <h5>Agency Brokerage Director</h5>
