--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -101,134 +101,76 @@
 
 
 
-<section class="featured-projects col-12 col-xl-10 offset-xl-1" id="leadership">
+  <section class="featured-projects col-10 col-md-10 col-lg-6 offset-lg-3 offset-1" id="leadership">
 
-  <p class="small-headline col-6">
-  BROKERAGE
-  </p>
+    <p class="small-headline col-6">
+    BROKERAGE
+    </p>
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/jim.png" alt="#" class="col-md-12">
-  <div class="name-container">
-  <h4>JIM SCALO</h4>
-  <h5>President & CEO</h5>
-</div>
-
-  <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
-  </ul>
-  <div class="background-white">
-  </div>
-  </div>
-  </div>
-
-
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/lindsay.png" alt="#" class="col-md-12">
+  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/victor.png" alt="#" class="col-12">
     <div class="name-container">
-  <h4>Lindsay Files</h4>
-  <h5>Chief Financial Officer</h5>
-</div>
-
-  <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
-  </ul>
-  <div class="background-white">
-  </div>
-  </div>
+    <h4>Victor Konno</h4>
+    <h5>Leasing Specialist</h5>
   </div>
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/christie.png" alt="#" class="col-md-12">
-    <div class="name-container">
-  <h4>Christie Reiber</h4>
-  <h5>Chief Investment Officer</h5>
-</div>
-
-  <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
-  </ul>
-  <div class="background-white">
-  </div>
-  </div>
-  </div>
+    <ul>
+      <li><a href="#">email address</a></li>
+      <li><a href="#">phone number</a></li>
+      <li><a href="#">LinkedIn</a></li>
+      <li class="bio"><a href="#">Read Bio</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
 
 
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/steve.png" alt="#" class="col-md-12">
-    <div class="name-container">
-  <h4>Steve Whittingham</h4>
-  <h5>President & CEO</h5>
-</div>
-
-  <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
-  </ul>
-  <div class="background-white">
-  </div>
-  </div>
+  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/shannon.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Shannon McGuire</h4>
+    <h5>Leasing Specialist</h5>
   </div>
 
+    <ul>
+      <li><a href="#">email address</a></li>
+      <li><a href="#">phone number</a></li>
+      <li><a href="#">LinkedIn</a></li>
+      <li class="bio"><a href="#">Read Bio</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
 
-
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/bob.png" alt="#" class="col-md-12">
-  <div class="name-container">
-<h4>Bob Fittipaldo</h4>
-<h5>Director of Facilities</h5>
-</div>
-
-<ul>
-  <li><a href="#">email address</a></li>
-  <li><a href="#">phone number</a></li>
-  <li><a href="#">LinkedIn</a></li>
-  <li class="bio"><a href="#">Read Bio</a></li>
-</ul>
-<div class="background-white">
-</div>
-</div>
-</div>
-
-
-
-<div class="container-p col-10 col-md-2 col-lg-2  offset-1 offset-xl-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-  <img src="assets/images/team/scott.png" alt="#" class="col-md-12">
-    <div class="name-container">
-  <h4>Scott DiGuglielmo</h4>
-  <h5>Agency Brokerage Director</h5>
-</div>
-
-  <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
-    <li><a href="#">LinkedIn</a></li>
-    <li class="bio"><a href="#">Read Bio</a></li>
-  </ul>
-  <div class="background-white">
-  </div>
-  </div>
+  <div class="container-p col-12 col-md-4 col-lg-4 float-left">
+    <div class="portfolio-list col-12 float-left">
+    <img src="assets/images/team/ruby.png" alt="#" class="col-12">
+      <div class="name-container">
+    <h4>Ruby Scalo</h4>
+    <h5>Leasing Specialist</h5>
   </div>
 
+    <ul>
+      <li><a href="#">email address</a></li>
+      <li><a href="#">phone number</a></li>
+      <li><a href="#">LinkedIn</a></li>
+      <li class="bio"><a href="#">Read Bio</a></li>
+    </ul>
+    <div class="background-white">
+    </div>
+    </div>
+    </div>
 
-</section>
+
+
+
+
+
+  </section>
 
 
 
