--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h5 class="col-8 col-lg-4">A Luxury Real Estate Firm</h5>
 
 
-      <div class="menu-container col-1 offset-1 offset-md-2 d-lg-none">
+      <div class="menu-container col-1 offset-1 offset-md-2 d-xl-none">
       <a onclick="myFunction()" class="col-12 float-left"><img src="assets/menu.svg" alt="Dropdown Menu" class="dropdown-menu-custom"></a>
       </div>
 
