--- a/press.html
+++ b/press.html
@@ -104,7 +104,7 @@
 
 
 
-            <ul class="containMix portfolio-container col-12 col-lg-10 offset-lg-1 float-left" id="press">
+            <ul class="containMix portfolio-container col-12 col-md-10 offset-md-1 float-left" id="press">
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
