--- a/press.html
+++ b/press.html
@@ -109,7 +109,7 @@
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
-                <a href="portfolio-beacon.html">
+                <a href="press-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
               <img src="assets/images/portfolio/visionedit.png" alt="#">
               </div>
