--- a/portfolio.html
+++ b/portfolio.html
@@ -105,8 +105,9 @@
                       <li><a href="#" class="filter" data-filter=".current">CURRENT</a></li>
 
 
-                      <li><a href="#" class="filter" data-filter=".east">URBAN</a></li>
-                      <li><a href="#" class="filter" data-filter=".west">SUBURBAN</a></li>
+                      <li><a href="#" class="filter" data-filter=".brokerage">BROKERAGE</a></li>
+                      <li><a href="#" class="filter" data-filter=".development">DEVELOPMENT</a></li>
+                      <li><a href="#" class="filter" data-filter=".management">MANAGEMENT</a></li>
 
                     </ul>
 
