--- a/press-article-1.html
+++ b/press-article-1.html
@@ -107,7 +107,7 @@
                         <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">Corridors of Opportunity: What's next for the Strip District?</h1>
                       </div>
 
-                      <div class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
+                      <div class="article-overview-container col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
                         <p class="stamp col-12">Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
                         <ul class="col-12">
 
@@ -123,6 +123,8 @@
                           <li><a href="mailto:name@mail.com?body=Line1-text%0D%0Ahttps://zanehuggins.github.io/Burns-Scalo-6/press-article-1.html">Email</a></li>
 
                         </ul>
+
+
                       </div>
 <!--
                       <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
