--- a/press.html
+++ b/press.html
@@ -107,6 +107,10 @@
 
             <ul class="containMix portfolio-container col-12 col-md-10 offset-md-1 float-left" id="press">
 
+
+<!-- 1-9 -->
+
+
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="press-article-1.html">
@@ -122,7 +126,7 @@
 
             <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-bentley.html">
+              <a href="press-article-2.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/jim.png" alt="#">
             </div>
@@ -134,7 +138,7 @@
 
             <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-boardwalk.html">
+              <a href="press-article-3.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/diamond-ridge.png" alt="#">
             </div>
@@ -149,7 +153,7 @@
 
             <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-diamond-ridge.html">
+              <a href="press-article-4.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/bsb.png" alt="#">
             </div>
@@ -161,7 +165,7 @@
 
             <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-piazza.html">
+              <a href="press-article-5.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/biotech.png" alt="#">
             </div>
@@ -173,7 +177,7 @@
 
             <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-riviera.html">
+              <a href="press-article-6.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/management.png" alt="#">
             </div>
@@ -185,7 +189,7 @@
 
             <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-vision.html">
+              <a href="press-article-7.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/bentley.png" alt="#">
             </div>
@@ -197,7 +201,7 @@
 
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-zenith.html">
+              <a href="press-article-8.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/future.png" alt="#">
             </div>
@@ -210,7 +214,7 @@
 
           <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
           <div class="portfolio-list col-12 float-left">
-            <a href="portfolio-zenith.html">
+            <a href="press-article-9.html">
               <div class="col-12 p-0 portfolio-image-container">
           <img src="assets/images/press/cbre.png" alt="#">
           </div>
@@ -221,6 +225,126 @@
         </li>
 
 
+
+<!-- 10-18 -->
+
+
+
+
+
+
+        <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+          <div class="portfolio-list col-12 float-left">
+            <a href="press-article-10.html">
+              <div class="col-12 p-0 portfolio-image-container">
+          <img src="assets/images/press/diamond-ridge.png" alt="#">
+          </div>
+        <h3>Burns Scalo reveals plans for Diamond Ridge in Moon Township</h3>
+        <p>Apr 22, 2020, 7:12pm EDT | Pittsburgh Business Times</p>
+        </a>
+        </div>
+      </li>
+
+
+        <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-11.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/piazza.png" alt="#">
+        </div>
+        <h3>Burns Scalo gets approval to build 50,000-square-foot Piazza retail development</h3>
+        <p>Jun 15, 2020, 11:56am EDT | Jim Scalo</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-3.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/diamond-ridge.png" alt="#">
+        </div>
+        <h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
+        <p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
+        </a>
+        </div>
+      </li>
+
+
+
+
+        <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-4.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/bsb.png" alt="#">
+        </div>
+        <h3>Burns Scalo doubles investment on Riviera office project and lands another life sciences firm</h3>
+        <p>Dec 29, 2020, 11:05am EST | Tim Schooley</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-5.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/biotech.png" alt="#">
+        </div>
+        <h3>Burns Scalo lands publicly traded biotech firm for Riviera in South Oakland</h3>
+        <p>Oct 14, 2020, 2:59pm EDT | Tim Schooley</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-6.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/management.png" alt="#">
+        </div>
+        <h3>Largest Pittsburgh-area Commercial Property Managers</h3>
+        <p> Jan 01, 2021, 6:00am EST | Pittsburgh Business Times</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-7.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/bentley.png" alt="#">
+        </div>
+        <h3>Best Places to Work in Western Pennsylvania, Large category</h3>
+        <p>Dec 05, 2020, 7:03pm EST| Pittsburgh Business Times</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="press-article-8.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/press/future.png" alt="#">
+        </div>
+        <h3>Developers work to 'future proof' their projects for a very different world after Covid-19</h3>
+        <p>May 1, 2020, 2:57pm EDT | Tim Schooley</p>
+        </a>
+        </div>
+      </li>
+
+
+      <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+      <div class="portfolio-list col-12 float-left">
+        <a href="press-article-9.html">
+          <div class="col-12 p-0 portfolio-image-container">
+      <img src="assets/images/press/cbre.png" alt="#">
+      </div>
+      <h3>CBRE ranks Pittsburgh as top emerging market for life sciences based on fast-growing R&D employment</h3>
+      <p>Oct 16, 2020, 8:20am EDT | Tim Schooley</p>
+      </a>
+      </div>
+    </li>
 
         </ul>
 
