--- a/press.html
+++ b/press.html
@@ -253,19 +253,19 @@
         <img src="assets/images/press/piazza.png" alt="#">
         </div>
         <h3>Burns Scalo gets approval to build 50,000-square-foot Piazza retail development</h3>
-        <p>Jun 15, 2020, 11:56am EDT | Jim Scalo</p>
+        <p>Jun 15, 2020, 11:56am EDT | Tim Schooley</p>
         </a>
         </div>
       </li>
 
         <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-3.html">
+          <a href="press-article-12.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/diamond-ridge.png" alt="#">
+        <img src="assets/images/press/construction.png" alt="#">
         </div>
-        <h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
-        <p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
+        <h3>Burns Scalo gets approval to resume building three development projects</h3>
+        <p>Apr 20, 2020, 8:04pm EDT | Tim Schooley</p>
         </a>
         </div>
       </li>
@@ -275,36 +275,36 @@
 
         <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-4.html">
+          <a href="press-article-13.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/bsb.png" alt="#">
+        <img src="assets/images/press/boardwalk.png" alt="#">
         </div>
-        <h3>Burns Scalo doubles investment on Riviera office project and lands another life sciences firm</h3>
-        <p>Dec 29, 2020, 11:05am EST | Tim Schooley</p>
+        <h3>ConnectiveRx takes second Boardwalk building to build out 1,500-employee campus</h3>
+        <p>Feb 3, 2020, 3:24pm EST | Tim Schooley</p>
         </a>
         </div>
       </li>
 
         <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-5.html">
+          <a href="press-article-14.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/biotech.png" alt="#">
+        <img src="assets/images/press/visionedit.jpg" alt="#">
         </div>
-        <h3>Burns Scalo lands publicly traded biotech firm for Riviera in South Oakland</h3>
-        <p>Oct 14, 2020, 2:59pm EDT | Tim Schooley</p>
+        <h3>RDC, Burns Scalo partner for $75M Strip District development</h3>
+        <p>Nov 10, 2020, 4:53pm EST | Tim Schooley</p>
         </a>
         </div>
       </li>
 
         <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-6.html">
+          <a href="press-article-15.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/management.png" alt="#">
+        <img src="assets/images/press/pamela.png" alt="#">
         </div>
-        <h3>Largest Pittsburgh-area Commercial Property Managers</h3>
-        <p> Jan 01, 2021, 6:00am EST | Pittsburgh Business Times</p>
+        <h3>Burns Scalo hires away development point person for Strip District Terminal by McCaffery Interests</h3>
+        <p>Nov 6, 2019, 12:52pm EST | Pittsburgh Business Times</p>
         </a>
         </div>
       </li>
@@ -315,8 +315,8 @@
             <div class="col-12 p-0 portfolio-image-container">
         <img src="assets/images/press/bentley.png" alt="#">
         </div>
-        <h3>Best Places to Work in Western Pennsylvania, Large category</h3>
-        <p>Dec 05, 2020, 7:03pm EST| Pittsburgh Business Times</p>
+        <h3>Burns Scalo closes on Star City site in South Fayette</h3>
+        <p>Nov 6, 2019, 12:52pm EST| Pittsburgh Business Times</p>
         </a>
         </div>
       </li>
