--- a/press-article-16.html
+++ b/press-article-16.html
@@ -101,7 +101,7 @@
 <div class="col-12" id="article">
 
                             <div class="col-12 p-0 article-image-container">
-                        <img src="assets/images/press/pamela.png" alt="#" class="top">
+                        <img src="assets/images/press/piazza-2.png" alt="#">
                         </div>
                         <div class="col-12">
                         <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">Burns Scalo closes on Star City site in South Fayette</h1>
