--- a/press.html
+++ b/press.html
@@ -311,9 +311,9 @@
 
         <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-7.html">
+          <a href="press-article-16.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/bentley.png" alt="#">
+        <img src="assets/images/press/piazza-2.png" alt="#">
         </div>
         <h3>Burns Scalo closes on Star City site in South Fayette</h3>
         <p>Nov 6, 2019, 12:52pm EST| Pittsburgh Business Times</p>
@@ -323,28 +323,15 @@
 
         <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="press-article-8.html">
+          <a href="press-article-17.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/press/future.png" alt="#">
+        <img src="assets/images/press/lease.png" alt="#">
         </div>
-        <h3>Developers work to 'future proof' their projects for a very different world after Covid-19</h3>
-        <p>May 1, 2020, 2:57pm EDT | Tim Schooley</p>
+        <h3>Largest Office Leases (New) signed in 2019</h3>
+        <p>Oct 23, 2020, 9:28am EDT | Ethan Lott</p>
         </a>
         </div>
       </li>
-
-
-      <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
-      <div class="portfolio-list col-12 float-left">
-        <a href="press-article-9.html">
-          <div class="col-12 p-0 portfolio-image-container">
-      <img src="assets/images/press/cbre.png" alt="#">
-      </div>
-      <h3>CBRE ranks Pittsburgh as top emerging market for life sciences based on fast-growing R&D employment</h3>
-      <p>Oct 16, 2020, 8:20am EDT | Tim Schooley</p>
-      </a>
-      </div>
-    </li>
 
         </ul>
 
