--- a/team.html
+++ b/team.html
@@ -156,8 +156,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
   <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
+    <li><a href="mailto:jscalo@burnsscalo.com">jscalo@burnsscalo.com</a></li>
+    <li><a href="#">O: 412.670.4252</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -176,8 +176,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
   <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
+    <li><a href="mailto:lfiles@burnsscalo.com">lfiles@burnsscalo.com</a></li>
+    <li><a href="#">O: 412.956.4554</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -195,8 +195,9 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
   <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
+    <li><a href="mailto:creiber@burnsscalo.com">creiber@burnsscalo.com</a></li>
+    <li><a href="#">O: 412.250.3295</a></li>
+    <li><a href="#">C: 412.445.5281</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -215,8 +216,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
   <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
+    <li><a href="mailto:swhittingham@burnsscalo.com">swhittingham@burnsscalo.com</a></li>
+    <li><a href="#">O: 724.494.7066</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -236,8 +237,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
 <ul>
-  <li><a href="#">email address</a></li>
-  <li><a href="#">phone number</a></li>
+  <li><a href="mailto:bfittipaldo@burnsscalo.com">bfittipaldo@burnsscalo.com</a></li>
+  <li><a href="#">O: 412.297.3535</a></li>
   <li><a href="#">LinkedIn</a></li>
   <li class="bio"><a href="#">Read Bio</a></li>
 </ul>
