--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -89,7 +89,7 @@
 
           </nav>
 
-          
+
 <div class="scroll-container col-12 p-0" id="what-we-do">
 
 
@@ -119,10 +119,10 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:vkonno@burnsscalo.com">vkonno@burnsscalo.com</a></li>
+      <li>O: <a href="#">724.622.2756</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
+
     </ul>
     <div class="background-white">
     </div>
@@ -139,10 +139,10 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:smcguire@burnsscalo.com">smcguire@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.458.6204</a></li>
+      <li>C: <a href="#">412.266.4417</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -158,10 +158,11 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:rscalo@burnsscalo.com">rscalo@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.250.3271</a></li>
+      <li>C: <a href="#">412.736.5157</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
+
     </ul>
     <div class="background-white">
     </div>
