--- a/team.html
+++ b/team.html
@@ -147,7 +147,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   LEADERSHIP
   </p>
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/jim.png" alt="#" class="col-12">
   <div class="name-container">
@@ -157,7 +157,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
   <ul>
     <li><a href="mailto:jscalo@burnsscalo.com">jscalo@burnsscalo.com</a></li>
-    <li><a href="#">O: 412.670.4252</a></li>
+    <li>O: <a href="#">412.670.4252</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -167,7 +167,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/lindsay.png" alt="#" class="col-12">
     <div class="name-container">
@@ -177,7 +177,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
   <ul>
     <li><a href="mailto:lfiles@burnsscalo.com">lfiles@burnsscalo.com</a></li>
-    <li><a href="#">O: 412.956.4554</a></li>
+    <li>O: <a href="#">412.956.4554</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -186,7 +186,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
   </div>
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/christie.png" alt="#" class="col-12">
     <div class="name-container">
@@ -196,8 +196,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
   <ul>
     <li><a href="mailto:creiber@burnsscalo.com">creiber@burnsscalo.com</a></li>
-    <li><a href="#">O: 412.250.3295</a></li>
-    <li><a href="#">C: 412.445.5281</a></li>
+    <li>O: <a href="#">412.250.3295</a></li>
+    <li>C: <a href="#">412.445.5281</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -207,7 +207,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
   </div>
 
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/steve.png" alt="#" class="col-12">
     <div class="name-container">
@@ -217,7 +217,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
   <ul>
     <li><a href="mailto:swhittingham@burnsscalo.com">swhittingham@burnsscalo.com</a></li>
-    <li><a href="#">O: 724.494.7066</a></li>
+    <li>O: <a href="#">724.494.7066</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
@@ -228,7 +228,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/bob.png" alt="#" class="col-12">
   <div class="name-container">
@@ -238,7 +238,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 <ul>
   <li><a href="mailto:bfittipaldo@burnsscalo.com">bfittipaldo@burnsscalo.com</a></li>
-  <li><a href="#">O: 412.297.3535</a></li>
+  <li>O: <a href="#">412.297.3535</a></li>
   <li><a href="#">LinkedIn</a></li>
   <li class="bio"><a href="#">Read Bio</a></li>
 </ul>
@@ -249,7 +249,7 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 
 
 
-<div class="container-p col-12 col-md-4 col-lg-2 float-left">
+<div class="container-p col-12 col-md-4 col-xl-2 float-left">
   <div class="portfolio-list col-12 float-left">
   <img src="assets/images/team/scott.png" alt="#" class="col-12">
     <div class="name-container">
@@ -258,8 +258,8 @@ We don’t <span class="italic">sell</span> a luxury product — we <span class=
 </div>
 
   <ul>
-    <li><a href="#">email address</a></li>
-    <li><a href="#">phone number</a></li>
+    <li><a href="mailto:sdiguglielmo@burnsscalo.com">sdiguglielmo@burnsscalo.com</a></li>
+    <li>O: <a href="#">724.984.6251</a></li>
     <li><a href="#">LinkedIn</a></li>
     <li class="bio"><a href="#">Read Bio</a></li>
   </ul>
