--- a/team-development.html
+++ b/team-development.html
@@ -118,10 +118,9 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:browse@burnsscalo.com">browse@burnsscalo.com</a></li>
+      <li>O: <a href="#">724.513.5457</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -138,10 +137,10 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:pflaherty@burnsscalo.com">pflaherty@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.862.7125</a></li>
+      <li>C: <a href="#">412.510.7525</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -157,10 +156,10 @@
   </div>
 
     <ul>
-      <li><a href="#">email address</a></li>
-      <li><a href="#">phone number</a></li>
+      <li><a href="mailto:tmangis@burnsscalo.com">tmangis@burnsscalo.com</a></li>
+      <li>O: <a href="#">412.510.7525</a></li>
+      <li>C: <a href="#">412.862.7125</a></li>
       <li><a href="#">LinkedIn</a></li>
-      <li class="bio"><a href="#">Read Bio</a></li>
     </ul>
     <div class="background-white">
     </div>
@@ -178,8 +177,8 @@
     </div>
 
       <ul>
-        <li><a href="#">email address</a></li>
-        <li><a href="#">phone number</a></li>
+        <li><a href="mailto:traught@burnsscalo.com">traught@burnsscalo.com</a></li>
+        <li>C: <a href="#">724.513.4257</a></li>
         <li><a href="#">LinkedIn</a></li>
         <li class="bio"><a href="#">Read Bio</a></li>
       </ul>
