--- a/portfolio-zenith.html
+++ b/portfolio-zenith.html
@@ -95,7 +95,7 @@
 
 <img src="assets/images/portfolio/zenith/zenith.png" alt="#" class="video-background">
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">THE</span><br><span class="turquoise-underline portfolio-delay-2">VISION</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">ZENITH</span><br><span class="turquoise-underline portfolio-delay-2">RIDGE</span></h1>
 
         </section>
 
