--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,20 @@
 
             <ul class="containMix portfolio-container col-10 col-md-10 offset-1 float-left">
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+              <li class="brokerage mix container-p col-12 col-md-4 col-lg-4 float-left">
+                <div class="portfolio-list col-12 float-left">
+                  <a href="portfolio-beacon.html">
+                    <div class="col-12 p-0 portfolio-image-container">
+                <img src="assets/images/portfolio/abele.png" alt="#">
+                </div>
+              <h3>ABELE BUSINESS PARK</h3>
+              <p>South Fayette</p>
+              </a>
+              </div>
+            </li>
+
+
+            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="portfolio-beacon.html">
                   <div class="col-12 p-0 portfolio-image-container">
@@ -128,7 +141,22 @@
           </li>
 
 
-            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+
+
+          <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <div class="portfolio-list col-12 float-left">
+              <a href="portfolio-beacon.html">
+                <div class="col-12 p-0 portfolio-image-container">
+            <img src="assets/images/portfolio/beacon-2.png" alt="#">
+            </div>
+          <h3>BEACON II</h3>
+          <p>South Fayette</p>
+          </a>
+          </div>
+        </li>
+
+
+            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-bentley.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -140,7 +168,7 @@
             </div>
           </li>
 
-            <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-boardwalk.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -155,7 +183,7 @@
 
 
 
-            <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-diamond-ridge.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -167,7 +195,7 @@
             </div>
           </li>
 
-            <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-piazza.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -179,7 +207,7 @@
             </div>
           </li>
 
-            <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management mix current container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-riviera.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -191,7 +219,7 @@
             </div>
           </li>
 
-            <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-vision.html">
                 <div class="col-12 p-0 portfolio-image-container">
@@ -203,7 +231,7 @@
             </div>
           </li>
 
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-zenith.html">
                 <div class="col-12 p-0 portfolio-image-container">
