--- a/portfolio.html
+++ b/portfolio.html
@@ -156,6 +156,110 @@
         </li>
 
 
+
+        <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+          <div class="portfolio-list col-12 float-left">
+            <a href="portfolio-beacon.html">
+              <div class="col-12 p-0 portfolio-image-container">
+          <img src="assets/images/portfolio/bursca.png" alt="#">
+          </div>
+        <h3>BURSCA BUSINESS PARK</h3>
+        <p>South Fayette</p>
+        </a>
+        </div>
+      </li>
+
+
+
+
+      <li class="brokerage mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="portfolio-beacon.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/portfolio/eqt.png" alt="#">
+        </div>
+      <h3>EQT PLAZA</h3>
+      <p>Pittsburgh</p>
+      </a>
+      </div>
+    </li>
+
+
+
+
+
+    <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+      <div class="portfolio-list col-12 float-left">
+        <a href="portfolio-beacon.html">
+          <div class="col-12 p-0 portfolio-image-container">
+      <img src="assets/images/portfolio/first.png" alt="#">
+      </div>
+    <h3>FIRST SMITHFIELD</h3>
+    <p>Pittsburgh</p>
+    </a>
+    </div>
+  </li>
+
+
+
+  <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+    <div class="portfolio-list col-12 float-left">
+      <a href="portfolio-beacon.html">
+        <div class="col-12 p-0 portfolio-image-container">
+    <img src="assets/images/portfolio/foster-zero.png" alt="#">
+    </div>
+  <h3>FOSTER ZERO</h3>
+  <p>Greentree</p>
+  </a>
+  </div>
+</li>
+
+
+
+<li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+  <div class="portfolio-list col-12 float-left">
+    <a href="portfolio-beacon.html">
+      <div class="col-12 p-0 portfolio-image-container">
+  <img src="assets/images/portfolio/greentree.png" alt="#">
+  </div>
+<h3>GREENTREE PRIMARY CARE FACILITY</h3>
+<p>Greentree</p>
+</a>
+</div>
+</li>
+
+
+
+<li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+  <div class="portfolio-list col-12 float-left">
+    <a href="portfolio-beacon.html">
+      <div class="col-12 p-0 portfolio-image-container">
+  <img src="assets/images/portfolio/industry.png" alt="#">
+  </div>
+<h3>INDUSTRY DRIVE</h3>
+<p>Greentree</p>
+</a>
+</div>
+</li>
+
+
+
+
+<li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+  <div class="portfolio-list col-12 float-left">
+    <a href="portfolio-beacon.html">
+      <div class="col-12 p-0 portfolio-image-container">
+  <img src="assets/images/portfolio/stealth.png" alt="#">
+  </div>
+<h3>STEALTH</h3>
+<p>Greentree</p>
+</a>
+</div>
+</li>
+
+
+
+
             <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
               <a href="portfolio-bentley.html">
