--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
 
               <li class="brokerage mix container-p col-12 col-md-4 col-lg-4 float-left">
                 <div class="portfolio-list col-12 float-left">
-                  <a href="portfolio-beacon.html">
+                  <a href="portfolio-abele.html">
                     <div class="col-12 p-0 portfolio-image-container">
                 <img src="assets/images/portfolio/abele.png" alt="#">
                 </div>
@@ -145,7 +145,7 @@
 
           <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-beacon.html">
+              <a href="portfolio-beacon-2.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/portfolio/beacon-2.png" alt="#">
             </div>
@@ -154,6 +154,34 @@
           </a>
           </div>
         </li>
+
+
+
+
+        <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="portfolio-bentley.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/portfolio/bentley.png" alt="#">
+        </div>
+        <h3>THE BENTLEY</h3>
+        <p>Greentree</p>
+        </a>
+        </div>
+      </li>
+
+        <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
+        <div class="portfolio-list col-12 float-left">
+          <a href="portfolio-boardwalk.html">
+            <div class="col-12 p-0 portfolio-image-container">
+        <img src="assets/images/portfolio/boardwalk.png" alt="#">
+        </div>
+        <h3>BOARDWALK</h3>
+        <p>North Fayette</p>
+        </a>
+        </div>
+      </li>
+
 
 
 
@@ -168,6 +196,20 @@
         </a>
         </div>
       </li>
+
+
+
+      <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
+      <div class="portfolio-list col-12 float-left">
+        <a href="portfolio-diamond-ridge.html">
+          <div class="col-12 p-0 portfolio-image-container">
+      <img src="assets/images/portfolio/diamond.png" alt="#">
+      </div>
+      <h3>DIAMOND RIDGE</h3>
+      <p>Moon Township</p>
+      </a>
+      </div>
+    </li>
 
 
 
@@ -259,45 +301,6 @@
 
 
 
-
-            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-bentley.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/bentley.png" alt="#">
-            </div>
-            <h3>THE BENTLEY</h3>
-            <p>Greentree</p>
-            </a>
-            </div>
-          </li>
-
-            <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-boardwalk.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/boardwalk.png" alt="#">
-            </div>
-            <h3>BOARDWALK</h3>
-            <p>North Fayette</p>
-            </a>
-            </div>
-          </li>
-
-
-
-
-            <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-diamond-ridge.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/portfolio/diamond.png" alt="#">
-            </div>
-            <h3>DIAMOND RIDGE</h3>
-            <p>Moon Township</p>
-            </a>
-            </div>
-          </li>
 
             <li class="brokerage development management current mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
