--- a/portfolio-abele.html
+++ b/portfolio-abele.html
@@ -89,18 +89,13 @@
 
           </nav>
 
-
 <div class="scroll-container col-12 p-0" id="property-landing">
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/portfolio/beacon/beacon-hero.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+<img src="assets/images/portfolio/abele/abele-2.png" alt="#" class="bottom">
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1 turquoise-underline">BEACON I</span></h1>
+<h1 class="col-10 offset-1"><span class="turquoise-underline portfolio-delay-2">ABELE</span></h1>
         </section>
 
 
@@ -125,31 +120,27 @@ Your browser does not support the video tag.
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/beacon/waldron-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-1.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/waldron-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-4.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-3.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-5.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-1.png" class="d-block w-100" alt="...">
-    </div>
-
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/abele/abele-6.png" class="d-block w-100" alt="...">
     </div>
 
 
@@ -172,18 +163,21 @@ Your browser does not support the video tag.
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">BEACON I</span></h2>
-<h3 class="col-10 offset-1">South Fayette | 80,000 SF</h3>
+ABELE<br>
+<span class="green-underline">BUSINESS PARK</span></h2>
+<h3 class="col-12 offset-1">South Fayette | 42,700 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+  Abele Business Park offers a variety of flexible workspace solutions all within a welcoming campus setting. This includes free private parking for individual suites with build-to-suit options available. 24-hour maintenance of the property allows for a clear working space. Enjoy the accessibility of the onsite Hampton Inn hotel, Dunkin’ Donuts, and First National Bank with convenient walkability to a variety of surrounding amenities.
+<br><br>
+  Abele Business park is centrally located 15 minutes from Downtown Pittsburgh and Pittsburgh International Airport with direct Interchange access on and off I-79.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/44-Abele-Rd-Bridgeville-PA/6313756/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://www.loopnet.com/Listing/350-Technology-Dr-Pittsburgh-PA/9669869/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
@@ -191,7 +185,11 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
-  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">SCHEDULE TOUR</p>
+  <a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+<img src="assets/arrow.svg" alt="#" class="col-2">
+    </a>
+
+  <a href="#" class="col-12 link-outline-2 border-bottom"><p class="col-10">CONTACT BROKER</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
     </a>
 
@@ -210,45 +208,39 @@ Beacon I is the first Class-A office development inside Abele Business Park. Its
 
         </div><!-- CLOSES SCROLL CONTAINER -->
 
-
         <footer class="col-12 d-none d-xl-block">
           <ul class="col-4">
-            <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
-            <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to Instragram"></a></li>
+            <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+            <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
             </ul>
 
 
             <ul class="footer-nav col-4 offset-4">
-              <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
-              <li><a href="accessibility.html">ACCESSIBILITY</a></li>
-              <li><a href="tenant-perks.html">TENANT PERKS</a></li>
-              <li><a href="careers.html">CAREERS</a></li>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">NEWS</a></li>
+              <li><a href="#">CAREERS</a></li>
+              <li><a href="#">TENANT PERKS</a></li>
               </ul>
 
           </footer>
 
-
-
         <section class="col-12 d-xl-none">
-                <footer class="mobile-footer col-12">
+                <footer class="col-12">
+                  <ul class="col-4 offset-1">
+                    <li><a href="#"><img src="assets/linkedin.svg" alt="#"></a></li>
+                    <li><a href="#"><img src="assets/instagram.svg" alt="#"></a></li>
+                    </ul>
 
 
-
-                    <ul class="col-10 offset-1">
-                      <li class="link-outline-2 col-12"><a href="privacy-policy.html">PRIVACY POLICY</a></li>
-                      <li class="link-outline-2 col-12"><a href="accessibility.html">ACCESSIBILITY</a></li>
-                      <li class="link-outline-2 col-12"><a href="tenant-perks.html">TENANT PERKS</a></li>
-                      <li class="link-outline-2 border-bottom col-12"><a href="careers.html">CAREERS</a></li>
+                    <ul class="col-7">
+                      <li><a href="#">BLOG</a></li>
+                      <li><a href="#">NEWS</a></li>
+                      <li><a href="#">CAREERS</a></li>
+                      <li><a href="#">TENANT PERKS</a></li>
                       </ul>
-
-                      <ul class="social-media-list col-4 offset-4">
-                        <li><a href="https://www.linkedin.com/company/burns-&-scalo-real-estate-services" target="_blank"><img src="assets/linkedin.svg" alt="logo link to LinkedIn"></a></li>
-                        <li><a href="https://www.instagram.com/BurnsScaloRE/" target="_blank"><img src="assets/instagram.svg" alt="logo link to instagram"></a></li>
-                        </ul>
 
                   </footer>
                 </section>
-
 
 
 <!-- DROPDOWN MENU SCRIPT
