--- a/portfolio-beacon-2.html
+++ b/portfolio-beacon-2.html
@@ -94,11 +94,10 @@
       <section class="col-12" id="container-1">
         <span class="top"></span>
 
-        <video muted autoplay playsinline class="video-background">
-<source src="assets/videos/portfolio/beacon/beacon-hero.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
+
+        <img src="assets/images/portfolio/beacon-2/beacon-4.png" alt="#">
+
+
 
 <h1 class="col-10 offset-1"><span class="portfolio-delay-1 turquoise-underline">BEACON I</span></h1>
         </section>
@@ -119,38 +118,26 @@ Your browser does not support the video tag.
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
   </div>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/beacon/waldron-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/beacon-2/beacon-1.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/waldron-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/beacon-2/beacon-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-1.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/beacon-2/beacon-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/beacon-2/beacon-4.png" class="d-block w-100" alt="...">
     </div>
 
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/alpha-3.png" class="d-block w-100" alt="...">
-    </div>
 
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-1.png" class="d-block w-100" alt="...">
-    </div>
-
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/beacon/careform-2.png" class="d-block w-100" alt="...">
-    </div>
 
 
 
@@ -172,18 +159,18 @@ Your browser does not support the video tag.
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">BEACON I</span></h2>
+<span class="green-underline">BEACON II</span></h2>
 <h3 class="col-10 offset-1">South Fayette | 80,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-Beacon I is the first Class-A office development inside Abele Business Park. Its 80,000 square-feet are wrapped in floor-to-ceiling glass windows and topped with solar panels, making Beacon I an exquisite combination of modern design and innovative function in office space. Tenants enjoy outdoor meeting areas, natural walking trails with fitness stations and proximity to The Piazza for lunch, and TopGolf for some happy hour fun. The project was completed in March 2018.
+  Beacon II property is an 80,000 SF high-end office building located in Abele Business Park Community. Direct access to countless surrounding lifestyle amenities such as food trucks, walking trails, exercise stations. 100% Visibility from I-79. Building signage available. 24/7 Building Access. Onsite Facilities Technician. Perks Program: Discounts to countless business services in the area (hotels, restaurants, salons, coffee, fitness).
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/44-Abele-Rd-Bridgeville-PA/6313756/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/Abele-Rd-Bridgeville-PA/6313842/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
