--- a/portfolio-smithfield.html
+++ b/portfolio-smithfield.html
@@ -95,10 +95,10 @@
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/eqt/eqt-hero.png" alt="#" class="bottom">
+<img src="assets/images/portfolio/smithfield/smithfield.png" alt="#" class="full-width">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">EQT</span><br><span class="turquoise-underline portfolio-delay-2">PLAZA</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">FIRST</span><br><span class="turquoise-underline portfolio-delay-2">SMITHFIELD</span></h1>
         </section>
 
 
@@ -115,27 +115,18 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
 
   </div>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/eqt/eqt.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/smithfield/smithfield-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/smithfield/smithfield.png" class="d-block w-100" alt="...">
     </div>
 
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-3.png" class="d-block w-100" alt="...">
-    </div>
-
-    <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-4.png" class="d-block w-100" alt="...">
-    </div>
 
 
 
@@ -161,22 +152,22 @@
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">EQT PLAZA</span></h2>
-<h3 class="col-10 offset-1">Downtown Pittsburgh | 615,942SF</h3>
+<span class="green-underline">First Smithfield</span></h2>
+<h3 class="col-10 offset-1">Downtown Pittsburgh | 300,000 SF</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, ~616,000-square-foot skyscraper commands the Sixth Avenue entryway to the city’s cultural district, in walking distance of the Benedum Center for the Performing Arts, Heinz Hall and the O’Reilly Theater. A fusion of polished marble, brass and stone grace the two-story lobby. Onsite amenities include a deli, upscale restaurant and state-of-the-art conference and fitness facilities. A landscaped and gas-lit Plaza is home to lunchtime crowds and warm weather concerts.
+Premium Downtown Pittsburgh site. Signage and corporate branding available. Excellent riverfront views and visibility. On-site garage parking 200 spaces. Direct access from Downtown Pittsburgh to I-376 & I-279. Sustainably managed by Cass-G. Walkability to endless amenities. Abundant natural light.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/625-Liberty-Ave-Pittsburgh-PA/19465099/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/Fort-Pitt-Blvd-Pittsburgh-PA/4282010/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-<a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+<a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
