--- a/portfolio.html
+++ b/portfolio.html
@@ -216,12 +216,12 @@
 
       <li class="brokerage mix container-p col-12 col-md-4 col-lg-4 float-left">
         <div class="portfolio-list col-12 float-left">
-          <a href="portfolio-eqt-hero-1.html">
+          <a href="portfolio-eqt.html">
             <div class="col-12 p-0 portfolio-image-container">
-        <img src="assets/images/portfolio/eqt.png" alt="#">
+        <img src="assets/images/portfolio/eqt/eqt-hero-1.png" alt="#">
         </div>
       <h3>EQT PLAZA</h3>
-      <p>Pittsburgh</p>
+      <p>Downtown Pittsburgh</p>
       </a>
       </div>
     </li>
@@ -232,12 +232,12 @@
 
     <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
       <div class="portfolio-list col-12 float-left">
-        <a href="portfolio-beacon.html">
+        <a href="portfolio-smithfiel.html">
           <div class="col-12 p-0 portfolio-image-container">
       <img src="assets/images/portfolio/first.png" alt="#">
       </div>
     <h3>FIRST SMITHFIELD</h3>
-    <p>Pittsburgh</p>
+    <p>Downtown Pittsburgh</p>
     </a>
     </div>
   </li>
@@ -246,7 +246,7 @@
 
   <li class="brokerage development management mix container-p col-12 col-md-4 col-lg-4 float-left">
     <div class="portfolio-list col-12 float-left">
-      <a href="portfolio-beacon.html">
+      <a href="portfolio-foster-zero.html">
         <div class="col-12 p-0 portfolio-image-container">
     <img src="assets/images/portfolio/foster-zero.png" alt="#">
     </div>
