--- a/portfolio-foster-zero.html
+++ b/portfolio-foster-zero.html
@@ -95,10 +95,10 @@
         <span class="top"></span>
 
 
-<img src="assets/images/portfolio/eqt/eqt-hero.png" alt="#" class="bottom">
+<img src="assets/images/portfolio/foster-zero/foster-zero.png" alt="#" class="middle">
 
 
-<h1 class="col-10 offset-1"><span class="portfolio-delay-1">EQT</span><br><span class="turquoise-underline portfolio-delay-2">PLAZA</span></h1>
+<h1 class="col-10 offset-1"><span class="portfolio-delay-1">FOSTER</span><br><span class="portfolio-delay-2">ZERO</span><br><span class="turquoise-underline portfolio-delay-3">PLAZA</span></h1>
         </section>
 
 
@@ -117,29 +117,34 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
 
   </div>
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="assets/images/portfolio/eqt/eqt.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/foster-zero/foster-zero-2.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-2.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/foster-zero/foster-zero.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-3.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/foster-zero/foster-zero-3.png" class="d-block w-100" alt="...">
     </div>
 
     <div class="carousel-item">
-      <img src="assets/images/portfolio/eqt/eqt-4.png" class="d-block w-100" alt="...">
+      <img src="assets/images/portfolio/foster-zero/foster-zero-4.png" class="d-block w-100" alt="...">
     </div>
 
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/foster-zero/foster-zero-5.png" class="d-block w-100" alt="...">
+    </div>
 
-
-
+    <div class="carousel-item">
+      <img src="assets/images/portfolio/foster-zero/foster-zero-6.png" class="d-block w-100" alt="...">
+    </div>
 
 
 
@@ -158,25 +163,28 @@
 
 
 
+
+
 <div class="col-12 col-lg-5 col-xl-4">
 
   <h2 class="col-10 offset-1">
-<span class="green-underline">EQT PLAZA</span></h2>
-<h3 class="col-10 offset-1">Downtown Pittsburgh | 615,942SF</h3>
+    FOSTER ZERO<br>
+<span class="green-underline">PLAZA</span></h2>
+<h3 class="col-10 offset-1">Greentree | Business Park</h3>
 
 
 <p class="col-10 offset-1 d-none d-lg-block">
-EQT Plaza is a distinctive, Class A tower in downtown Pittsburgh. The 32-story, ~616,000-square-foot skyscraper commands the Sixth Avenue entryway to the city’s cultural district, in walking distance of the Benedum Center for the Performing Arts, Heinz Hall and the O’Reilly Theater. A fusion of polished marble, brass and stone grace the two-story lobby. Onsite amenities include a deli, upscale restaurant and state-of-the-art conference and fitness facilities. A landscaped and gas-lit Plaza is home to lunchtime crowds and warm weather concerts.
+This office building has had $2.2 million exterior and interior renovations took place enhancing the features of the property. The property includes brand new elevators, high walkability to nearby amenities, excellent rooftop signage and hillside signage is available. With extreme visibility of the building from I-376, enjoy quick and easy access to the interstate, located only five minutes from Downtown Pittsburgh. 400 Holiday Dr. is move-in ready and the furniture is available.
 </p>
 
 
 <div class="link-container col-10 offset-1">
 
-  <a href="https://looplink.burnsscalorealestate.com/Listing/625-Liberty-Ave-Pittsburgh-PA/19465099/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
+  <a href="https://looplink.burnsscalorealestate.com/Listing/400-Holiday-Dr-Pittsburgh-PA/3937949/" target="_blank" class="col-12 link-outline-2"><p class="col-10">VIEW LISTING</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
 </a>
 
-<a href="#" class="col-12 link-outline-2"><p class="col-10">SCHEDULE TOUR</p>
+<a href="#" class="col-12 link-outline-2"><p class="col-10">REQUEST MORE INFO</p>
 <img src="assets/arrow.svg" alt="#" class="col-2">
   </a>
 
